--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="print-button">Print</button>
         </div>  
         <div class="description">
-            <p>Artificial neural-networks are a replica of biological dendrites, cell bodies, and axons. They have the ability to learn. The machine is not programmed with task-specific rules, rather it gleams how to perform tasks by considering training examples. <br><br>This neural net was trained to determine what contrasting type was appropriate for any random color. It placed its' choice in the "Guess Text" section. By doing multiple training sessions of button clicks (white or black) to indicate what was the most visible text, the artifical intelligence quickly mastered how to determine the solution.</p>
+            <p>Artificial neural-networks are a replica of how biological dendrites, cell bodies, and axons learn. The machine neural-net is not programmed with task-specific rules, rather it gleams how to perform tasks by considering training examples. <br><br>This specific neural net (above) was trained to determine what contrasting type color was most visible for any random color. It placed its' choice in the "Guess Text" section. By doing multiple training sessions of button clicks (white or black) to indicate what was the most visible text, the artificial intelligence quickly mastered how to determine the solution.</p>
         </div>
     </div>
 </body>
